# Data-Warehouse-Product-Mix-Clustering

./: .dockerignore  .gitignore  Clustering_Analysis.py  Dockerfile  GATE_clustering.ipynb  LSTM_features_learning.ipynb  README.md  compose.yaml  data_clustering.ipynb  etl.py  etl_transform.ipynb  main.py  pyproject.toml
app/utils/: load_clustering.py
notebooks/: LSTM_features_learning.ipynb  data_clustering.ipynb  etl_transform.ipynb
pages/: 1_Product_Categories.py  2_Product_Details.py
src/config/: database_connection.py  warehouse_connection.py
src/models/: GAT.py  LSTM_Autoencoder.py
src/pipelines/: clustering.py  etl.py
src/utils/: pca.py  quarter_format.py
