[project]
name = "dwh"
version = "0.1.0"
description = "Product Clustering Analysis - A multipage Streamlit application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.51.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "sqlalchemy>=2.0.44",
    "pyodbc>=5.3.0",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.7.2",
]
